log

Wed 13 Mar 2024 08:57:20 PM UTC: 
 tests:  0|7
total_score: 0/70
a7a3762
Wed 13 Mar 2024 09:10:42 PM UTC: 
 exercises.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:38:18: error: expected expression before ‘)’ token
   38 |   int *newArr = ()
      |                  ^
exercises.c:38:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   38 |   int *newArr = ()
      |        ^~~~~~
exercises.c:39:16: error: control reaches end of non-void function [-Werror=return-type]
   39 |   return NULL; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
522b246
Wed 13 Mar 2024 09:11:27 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:49: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   27 | void reverseArray(int arr[], int size) { return 0;
      |                                                 ^
exercises.c:27:6: note: declared here
   27 | void reverseArray(int arr[], int size) { return 0;
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df16dd6
Wed 13 Mar 2024 09:11:56 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:49: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   27 | void reverseArray(int arr[], int size) { return 0;}
      |                                                 ^
exercises.c:27:6: note: declared here
   27 | void reverseArray(int arr[], int size) { return 0;}
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8be6ba
Wed 13 Mar 2024 09:12:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:49: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   27 | void reverseArray(int arr[], int size) { return NULL;}
      |                                                 ^~~~
exercises.c:27:6: note: declared here
   27 | void reverseArray(int arr[], int size) { return NULL;}
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
96efb48
Wed 13 Mar 2024 09:12:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
48b2015
Wed 13 Mar 2024 09:17:08 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:18: error: expected expression before ‘)’ token
   29 |   for (int i = 0;)
      |                  ^
exercises.c:30:1: error: expected expression before ‘}’ token
   30 | }
      | ^
exercises.c:29:12: error: unused variable ‘i’ [-Werror=unused-variable]
   29 |   for (int i = 0;)
      |            ^
exercises.c:28:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   28 |   int temp;
      |       ^~~~
exercises.c: In function ‘checkSorted’:
exercises.c:58:34: error: expected statement before ‘)’ token
   58 |   for (int i = 0; i < size ; i++))
      |                                  ^
exercises.c:60:15: error: ‘i’ undeclared (first use in this function)
   60 |       if (arr[i] > primerNum) return 1;
      |               ^
exercises.c:60:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:4: error: control reaches end of non-void function [-Werror=return-type]
   65 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
9cf1764
